stories/Organism/Blocks/FeaturedContentCard/PagewideContentCard/pagewidecard.scss
@import '../../../../assets/scss/variables';
@import '../../../../assets/scss/mixins';
@import '../../../../assets/scss/base';

/* page-wide-card start */
.wide-card {
  border-top: 2px solid $color-black;

  @include devicebreak(medium) {
    &:hover {
      .wide-card__image::before {
        opacity: 0.75;
      }
    }
  }

  &__wrapper {
    @include devicebreak(small) {
      display: flex;
      flex-direction: column-reverse;
    }
  }

  &__tag {
    font-size: $font-size-12;
    font-weight: 700;
    padding: $spacing-16 $spacing-16 1.125rem $spacing-16;

    @include devicebreak(medium) {
      padding: $spacing-16 $spacing-24;
    }
  }

  &__image-link {
    @extend %img_none;
  }
}

.wide-card__description {
  .wide-card__summary {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-between;

    @include devicebreak(medium) {
      align-items: flex-start;
    }

    a {
      @extend %img_none;

      cursor: pointer;

      h4 {
        margin: $spacing-16;

        @include devicebreak(medium) {
          margin: $spacing-48 $spacing-24 $spacing-32;
        }
      }

      p {
        margin: $spacing-16 $spacing-16 $spacing-32 $spacing-16;

        @include devicebreak(medium) {
          margin: 0 $spacing-24 $spacing-32;
        }
      }
    }

    .button--primary {
      @include devicebreak(medium) {
        margin-left: $spacing-24;
      }
    }
  }
}

.wide-card__image {
  @extend %img_none;

  position: relative;

  @include devicebreak(medium) {
    &::before {
      @include transition(0.5s ease);

      background-image: linear-gradient(45deg, $color-yellow, transparent 80%);
      content: '';
      display: block;
      height: 100%;
      left: 0;
      opacity: 0;
      position: absolute;
      top: 0;
      width: 100%;
    }
  }

  img {
    height: 100%;
    width: 100%;
  }
}

[dir='rtl'] {
  .wide-card__summary {
    .button--primary {
      @include devicebreak(medium) {
        margin-left: 0;
        margin-right: $spacing-24;
      }
    }
  }
}

/* page-wide-card end */

